<resources>
    <string name="app_name">Bkance</string>

    <string name="book_title">Book title</string>
    <string name="book_author">Author</string>
    <string name="book_description">Description</string>
    <string name="book_date">First published: %1$s</string>
    <string name="book_rating">%1$s avg rating</string>
    <string name="button_search_book">Search book</string>
    <string name="action_settings">Settings</string>

    <string name="thumbnail_description">Book Cover</string>
    <string name="rating_count">%1$s ratings</string>
    <string name="Goodreads_title">Goodreads</string>
    <string name="input_book">Enter</string>
    <string name="hint_enter_book">Book title</string>
    <string name="title_setting">Setting</string>
    <string name="title_current_book">Current book title</string>
    <string name="text_daily_rec">Receive daily recommendations</string>
    <string name="default_book_title">No current book title</string>
    <string name="button_past_list">Old Recs</string>
    <string name="card_more_button">Learn more</string>
    <string name="card_add_button">Add</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_main">Books</string>
    <string name="navigation_previous">Previous</string>
    <string name="navigation_saved">Saved</string>
    <string name="navigation_setting">Setting</string>
    <string name="navigation_feedback">Send feedback</string>
    <string name="navigation_input">Enter book title</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="Header">Header</string>
    <string name="new_recommendation">You have a new book</string>
    <string name="bookinfo_search">Search</string>
    <string name="action_refresh">Refresh</string>

    <string name="test_des">In The Unbearable Lightness of Being, Milan Kundera tells the story of a young woman in love with a man torn between his love for her and his incorrigible womanizing and one of his mistresses and her humbly faithful lover. This magnificent novel juxtaposes geographically distant places, brilliant and playful reflections, and a variety of styles to take its place as perhaps the major achievement of one of the world’s truly great writers.</string>
    <string name="action_delete">Delete</string>
    <string name="snackbar_undo">Undo</string>

    <string name="snackbar_delete_text">%1$d marked as Deleted</string>
    <string name="card_rating">%1$s avg rating by %2$s</string>
    <string name="title_activity_book_detail">Book Detail</string>
    <string name="setting_current_title">Current title</string>
    <string name="setting_notification">Notifications</string>
    <string name="snackbar_open">Open</string>
    <string name="notification_new_book">You have a new book</string>
    <string name="notification_content_text">New Book: %1$s</string>
    <string name="setting_about">About</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_comment">Your review will help improve further development of the app. Thank you.</string>
    <string name="no_search_title_message">Please enter book title for search</string>
    <string name="no_recommendations_message">There are no more recommendations for the book</string>
    <string name="search_title">Search book list</string>
    <string name="navigation_my_books">My Books</string>
</resources>
