<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_main"
            android:title="@string/navigation_main"/>
        <item
            android:id="@+id/navigation_previous"
            android:title="@string/navigation_previous"/>
        <item
            android:id="@+id/navigation_input"
            android:title="@string/navigation_input"/>

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_setting"
            android:title="@string/navigation_setting"/>
        <item
            android:id="@+id/navigation_feedback"
            android:title="@string/navigation_feedback"/>
    </group>
</menu>