<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_book_info"
    tools:context="com.simpleastudio.recommendbookapp.BookInfoFragment">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/textview_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_author"
        android:layout_below="@id/textview_title"/>

    <TextView
        android:id="@+id/textview_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_date"
        android:layout_below="@id/textview_author"/>

    <TextView
        android:id="@+id/textview_rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_rating"
        android:layout_below="@id/textview_date"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/textview_rating"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"/>

        <ScrollView
            android:id="@+id/scrollView_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

        <Button
            android:id="@+id/button_search_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search_book"/>

    </LinearLayout>




</RelativeLayout>
