<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Search for new book recommendation -->
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>
    <!-- "Past rec list", should appear as action button if possible-->
    <item
        android:id="@+id/action_previous_info"
        android:icon="@drawable/ic_view_list_white"
        android:title="@string/navigation_previous"
        app:showAsAction="ifRoom"/>

    <!--"Setting", should always be in overflow-->
    <item
        android:id="@+id/action_setting_info"
        android:icon="@drawable/ic_setting_white"
        android:title="@string/navigation_setting"
        app:showAsAction="never"/>

</menu>