<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    card_view:cardCornerRadius="2dp"
    android:elevation="2dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.android.volley.toolbox.NetworkImageView
            android:contentDescription="@string/thumbnail_description"
            android:layout_width="130dp"
            android:layout_height="180dp"
            android:id="@+id/card_imageview_thumbnail"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_textview_title"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/book_title"
            style="@style/TextAppearance.AppCompat.Body2"
            android:textSize="18sp"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_toLeftOf="@+id/card_imageview_thumbnail"
            android:layout_toStartOf="@+id/card_imageview_thumbnail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_textview_author"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/card_textview_title"
            android:text="@string/book_author"
            style="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/secondary_text"
            android:textSize="13sp"
            android:paddingTop="4dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_toLeftOf="@+id/card_imageview_thumbnail"
            android:layout_toStartOf="@+id/card_imageview_thumbnail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_textview_rating"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/card_textview_author"
            android:text="@string/card_rating"
            style="@style/TextAppearance.AppCompat.Body1"
            android:paddingTop="12dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_toLeftOf="@+id/card_imageview_thumbnail"
            android:layout_toStartOf="@+id/card_imageview_thumbnail" />



        <Button
            android:id="@+id/card_button_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_more_button"
            android:gravity="center"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:padding="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>